# ai-career-coach

./: .gitignore  README.md
backend/: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 360fbe5a45e2_init_schema.py  4f5815568044_expand_jobs_schema_canonical_skills_.py  84e36046a174_add_role_benchmark_and_readiness_score_.py  a7b8c9d0e1f2_drop_users_missing_skills.py  b9f20459bfce_add_job_tracking_and_job_tracking_events.py  c1d2e3f4g5h6_add_notifications_table.py  d1e2f3a4b5c6_drop_shadow_schema.py  e2f3a4b5c6d7_resize_jobs_embedding_768.py  e5f6g7h8i9j0_add_role_benchmarks_and_readiness.py  f3a4b5c6d7e8_add_hybrid_search_indexes.py  f6g7h8i9j0k1_add_reviewed_at_to_job_matches.py  g7h8i9j0k1l2_add_reviewed_at_to_role_benchmarks.py  h8i9j0k1l2m3_create_career_roadmaps.py  i9j0k1l2m3n4_add_user_id_to_readiness_scores.py  j0k1l2m3n4o5_add_strengths_to_job_matches.py  k1l2m3n4o5p6_add_job_match_id_to_readiness_scores.py
backend/app/: main.py
backend/app/ai/: local_embedder.py  nodes.py  prompts.py  registry.py  state.py
backend/app/core/: embeddings.py  llm.py  (+1 more)
backend/data/: sample_jobs.json  skill_aliases.json
backend/docs/: REINTEGRATION_REPORT.md  erd.md
backend/scripts/: backfill_embeddings.py  generate_sample_jobs.py  reset_db.py  run_daily_search.py
backend/tests/: conftest.py  test_cover_letter.py  test_embeddings.py  test_litellm.py  test_prompts.py  test_sample_dataset.py  test_schema.py  test_security.py
(+132 files in other folders)
